<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/RelativeLayuotDangNhap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_marginEnd="16dp"
        android:background="@mipmap/hotel_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageHoTel"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@mipmap/hotel"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/DangNhap"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/imageHoTel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/DangNhap"
            android:textAllCaps="true"
            android:textColor="#f00"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/DangNhap"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/custom_button_simple"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:hint="@string/Username"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Username"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/custom_button_simple"
            android:drawableStart="@drawable/ic_baseline_assignment_ind_24"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Password"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/QuenMatKhau"
            android:backgroundTint="#ff0"
            android:text="@string/Login" />

        <Button
            android:backgroundTint="#ff0"
            android:id="@+id/QuenMatKhau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_baseline_no_adult_content_24"
            android:gravity="center"
            android:text="@string/QuenMatKhau" />

        <Button
            android:backgroundTint="#ff0"
            android:id="@+id/TroGiup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Password"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/QuenMatKhau"
            android:text="@string/TroGiup" />

        <TextView
            android:id="@+id/BanCoTaiKhoangChua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/QuenMatKhau"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="175dp"
            android:layout_marginEnd="223dp"
            android:text="@string/BanCoTaiKhoangChua"
            android:textColor="#00FF0A"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/DangKi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Login"
            android:layout_marginStart="170dp"
            android:layout_marginTop="175dp"
            android:text="@string/DangKi"
            android:textColor="#008EFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/Thoat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TroGiup"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="240dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="#FF1100"
            android:text="@string/Thoat"
            android:textSize="13sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>